# OpenGL_Starter_Kit

./: .gitignore  CMakeLists.txt  README.md
lib/glad/include/: glad.h
lib/glad/src/: glad.c
scripts/: run.sh
src/: main.cpp
